# ROS-Based-Navigation-Robot

./: README.md
husky/husky_control/: CMakeLists.txt  package.xml
husky/husky_control/launch/: teleop.launch  teleop_keyboard.launch
husky/husky_control/scripts/: teleop_twist_keyboard.py
husky/husky_description/urdf/accessories/: intel_realsense.urdf.xacro
husky/husky_gazebo/launch/: new_husky.launch  new_world.launch  spawn_husky.launch
husky/husky_mapping/: CMakeLists.txt  package.xml
husky/husky_mapping/launch/: rtabmap.launch  rtabmap_new.launch
husky/husky_navigation/config/: costmap_common_params.yaml  teb_local_planner_params.yaml
husky/husky_navigation/launch/: rtabmap_navigation.launch
husky/husky_viz/rviz/: robot.rviz
rtabmap_ros/rtabmap_demos/launch/: demo_husky.launch
